fix logs, remove gift domain
